Fix background size on mobile devices round 4...

--- a/css/main.scss
+++ b/css/main.scss
@@ -8,7 +8,6 @@
 * {
     margin: 0px;
     padding: 0px;
-    box-sizing: content-box;
 }
 
 body {
